# Prism-Infer

./: .gitignore  .venv  CLAUDE.md  README.md  example.py  pyproject.toml
.claude/: settings.json
benchmarks/: __init__.py  analyze_nsys.py  bench_compile_preflight.py  bench_external_p9_quality.py  bench_external_prism.py  bench_external_sglang.py  bench_external_vllm.py  bench_kv_capacity.py  bench_kv_compression.py  bench_kv_trajectory_quality.py  bench_online.py  bench_p9_quality.py  bench_packed_mlp.py  bench_paged_decode.py  bench_system.py  bench_vl_cudagraph_decode.py  diagnose_graph_trajectory.py  harness.py  probe_p7_qkv_fusion.py  run_p9_process_matrix.py
docs/: APPLICATION_MATERIALS.md  CLAIMS.md  COMPRESSION_REPORT.md  DAY_02.md  EXTERNAL_REVIEW_2026_07_08.md  GPU_VERIFICATION_PROMPT.md  HISTORY.md  ISSUE_LOG.md  KNOWN_ISSUES.md  KV_ANALYSIS_REPORT.md  P10_FINAL_RESULTS.md  P2_ENGINE_VL_DESIGN.md  P3_VL_ENGINE_COMPLETENESS.md  P4_KV_TRACE_DESIGN.md  P6_SYSTEM_OPTIMIZATION_DESIGN.md  P7_ENGINE_ONLINE_DESIGN.md  P7_OFFLINE_COMPARISON_DESIGN.md  P8_DELIVERY.md  P9_ARCHITECTURE_PERFORMANCE_RFC.md  P9_COMPILER_GRAPH_PLAYBOOK.md  PERFORMANCE_REPORT.md  REPRODUCIBILITY.md  ROADMAP.md  STAGE_DELIVERY_TEMPLATE.md  TECHNICAL_REPORT.md  VERIFICATION.md
prism_infer/: __init__.py  config.py  llm.py  runtime_capabilities.py  sampling_params.py
scripts/: analyze_kv_trace.py  check_environment.py  compare_p9_external_quality.py  compare_p9_quality.py  download_p6_real_samples.sh  materialize_p9_mvbench_media.py  materialize_p9_quality.py  prepare_p9_video_sample.py  run_kv_trace_samples.py  score_visual_tokens.py  summarize_p6_external.py  summarize_p6_pareto.py  summarize_p6_pruning_fidelity.py  summarize_p7_external.py  summarize_p7_graph.py  summarize_p7_online.py  verify_p9_quality_materialization.py
tests/: README.md  conftest.py  test_add_rmsnorm.py  test_analysis_schema.py  test_attention_micro_debug.py  test_batch_numeric_sensitivity.py  test_bench_paged_decode.py  test_benchmark_harness.py  test_benchmark_schema.py  test_block4_gate_up.py  test_check_environment.py  test_compile_execution_config.py  test_compile_preflight.py  test_compression_off.py  test_engine_contracts.py  test_external_comparison.py  test_fp8_kv_cache.py  test_full_model.py  test_full_model_layerwise_debug.py  test_full_model_structure.py  test_full_model_vl.py  test_full_model_vl_layerwise_debug.py  test_full_model_vl_multi_image.py  test_full_model_vl_video.py  test_http_range_reader.py  test_kv_engine_hardening.py  test_kv_physical_layout.py  test_kv_trace_no_output_change.py  test_layer_debug.py  test_llm_online_serving.py  test_llm_output_decoding.py  test_llm_vl_cuda_graph_decode.py  test_llm_vl_generate.py  test_llm_vl_long_generate.py  test_llm_vl_mixed_batch_generate.py  test_llm_vl_tp2.py  test_model_runner_context_reset.py  test_model_runner_vl_cudagraph.py  test_model_runner_vl_mixed_prefill.py  (+53 more)
(+106 files in other folders)
