[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-infer"
version = "0.3.0"
authors = [{ name = "Xingkai Yu" }]
license = { file = "LICENSE" }
readme = "README.md"
description = "A multi-modal inference engine with KV Cache optimization — built from nano-vllm"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4.0",
    "transformers==5.13.0",
    "numpy>=1.26",
    "safetensors>=0.4",
    "tqdm>=4.66",
    "xxhash>=3.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
quality = [
    "opencv-python-headless==4.10.0.84",
    "pyarrow>=14.0",
    "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/xsmccc/Prism-Infer"
Repository = "https://github.com/xsmccc/Prism-Infer.git"
Issues = "https://github.com/xsmccc/Prism-Infer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["prism_infer*"]
