[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-infer"
version = "0.3.0"
authors = [{ name = "Xingkai Yu" }]
license = { file = "LICENSE" }
readme = "README.md"
description = "A multi-modal inference engine with KV Cache optimization — built from nano-vllm"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.5,<2.7",
    "transformers==5.13.0",
    "numpy>=1.26",
    "packaging>=23.2",
    "safetensors>=0.4",
    "tqdm>=4.66",
    "xxhash>=3.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
quality = [
    "opencv-python-headless==4.10.0.84",
    "pyarrow>=14.0",
    "requests>=2.31",
]
dev = [
    "pytest>=8.1",
    "ruff>=0.9",
]

[project.urls]
Homepage = "https://github.com/xsmccc/Prism-Infer"
Repository = "https://github.com/xsmccc/Prism-Infer.git"
Issues = "https://github.com/xsmccc/Prism-Infer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["prism_infer*"]

[tool.pytest.ini_options]
minversion = "8.1"
testpaths = ["tests"]
addopts = ["--strict-config", "--strict-markers"]
markers = [
    "unit: deterministic tests without a local model checkpoint or CUDA",
    "integration: tests spanning multiple Prism-Infer components",
    "model: tests requiring a local full Qwen3-VL checkpoint",
    "gpu: tests requiring a CUDA-capable GPU",
    "slow: tests unsuitable for the default CPU presubmit",
    "distributed: tests requiring more than one worker or GPU",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["tools/debug"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"benchmarks/*.py" = ["E402"]
"scripts/*.py" = ["E402"]
"tests/test_patch_embed.py" = ["E402"]
"tests/test_vision_encoder.py" = ["E402"]
"tests/test_vit_attention.py" = ["E402"]
"tests/test_vit_attention_rope.py" = ["E402"]
"tests/test_vit_mlp.py" = ["E402"]
